--- a/projects/crazycowmm.com/styles/main.css
+++ b/projects/crazycowmm.com/styles/main.css
@@ -2,7 +2,7 @@
 @import 'content_card.css';
 @import 'c_page.css';
 
-html {
+html, body {
   background-color: #171717;
   font-family: Roboto, sans-serif;
   margin: 0;
