--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
+
 html, body {
     margin: 0;
     width: 100%;
@@ -38,76 +40,33 @@ html, body {
     transition: 0.2s ease;
   }
 
-.cardGrid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
-    margin: 25px 15px;
-}
+  .button {
+    padding: 5px 25px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1rem;
+    border-radius: 15px;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+    text-decoration: none;
+  }
 
-@media screen and (max-width: 1420px) {
-    .cardGrid {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 20px;
-        margin: 25px 15px;
-    }
-}
-
-@media screen and (max-width: 500px) {
-    .cardGrid {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        gap: 15px 0;
-        margin: 25px 15px;
-    }
-}
-
-.cardGrid i {
+  .buttonRegular {
     color: white;
-    font-size: 30px;
-    margin: 20px;
-}
+    background-color: black;
+  }
+  
+  .buttonRegular:hover {
+    background-color: #444444;
+    transition: background-color 0.2s ease;
+  }
 
-.content_card {
-    width: 100%;
-    padding: 0;
-}
-
-.content_card .card_img {
-    min-width: 270px;
-    width: 100%;
-    margin: 0;
-    border-radius: 5px 5px 0 0px;
-}
-
-/* video {
-    min-width: 270px;
-    width: 100%;
-    margin: 0;
-} */
-
-
-.content_card .card_text {
-    padding: 10px;
-    background-color: #f6f6f6;
-    border: 1px solid #dddddd;
-    border-radius: 5px;
-    font-family: 'Lato', sans-serif;
+  .buttonSubtle {
     color: black;
-}
-
-.card_text .content_title {
-    font-size: 20px;
-    margin: 0 5px 0 0;
-    font-weight: 900;
-}
-
-.card_text .content_info {
-    display: flex;
-}
-
-.content_info p {
-    margin: 0 5px 0 0;
-    font-weight: 200;
+    background-color: #d5d5d5;
+  }
+  
+  .buttonSubtle:hover {
+    background-color: #c5c5c5;
+    transition: background-color 0.2s ease;
   }
