--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,1 +1,95 @@
 @import 'global.css';
+
+.featuredCard {
+    padding: 10px;
+    background-color: #f6f6f6;
+    border: 1px solid #eeeeee;
+    border-radius: 5px;
+    font-family: 'Lato', sans-serif;
+    color: black;
+    width: 45%;
+    margin: 0 auto;
+}
+
+.featuredCard .cardHeader {
+    width: 100%;
+    border-bottom: 1px solid #dddddd;
+    margin: -5px 0 5px -5px;
+    padding: 5px;
+}
+
+.cardGrid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    margin: 25px 15px;
+}
+
+@media screen and (max-width: 1420px) {
+    .cardGrid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+        margin: 25px 15px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .cardGrid {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 15px 0;
+        margin: 25px 15px;
+    }
+}
+
+.cardGrid i {
+    color: white;
+    font-size: 30px;
+    margin: 20px;
+}
+
+.content_card {
+    width: 100%;
+    padding: 0;
+}
+
+.content_card .card_img {
+    min-width: 270px;
+    width: 100%;
+    margin: 0;
+    border-radius: 5px 5px 0 0px;
+}
+
+/* video {
+    min-width: 270px;
+    width: 100%;
+    margin: 0;
+} */
+
+
+.content_card .card_text {
+    padding: 10px;
+    background-color: #f6f6f6;
+    border: 1px solid #eeeeee;
+    border-radius: 5px;
+    font-family: 'Lato', sans-serif;
+    color: black;
+}
+
+.card_text .content_title {
+    font-size: 20px;
+    margin: 0 5px 0 0;
+    font-weight: 900;
+}
+
+.card_text .content_info {
+    display: flex;
+    margin: 0 10px 0 5px;
+}
+
+.card_text .content_info p {
+    font-weight: 200;
+    text-align: right;
+    color: #aaa;
+}
