--- a/styles/global.css
+++ b/styles/global.css
@@ -72,7 +72,7 @@ html, body {
   }
 
   footer {
-    padding: 20px;
+    padding: 1px 5px 20px 5px;
     background-color: #f6f6f6;
     margin: 20px 0 0 0;
     width: 100%;
@@ -82,12 +82,12 @@ html, body {
   footer .socialGrid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 5px;
-    margin: 25px 15px;
-    width: 10%;
+    gap: 10px;
+    margin: 10px 15px;
+    width: 5%;
   }
 
   footer .socialGrid .socialIcon img {
-    width: 35px;
+    width: 25px;
     height: auto;
   }
