--- a/styles/projects.css
+++ b/styles/projects.css
@@ -14,7 +14,7 @@
 .featuredCard .cardHeader {
     width: 100%;
     border-bottom: 1px solid #dddddd;
-    margin: -5px 0 5px -5px;
+    margin: 5px 0 5px -5px;
     padding: 5px;
 }
 
@@ -52,13 +52,18 @@
 .content_card {
     width: 100%;
     padding: 0;
+    background-color: #f6f6f6;
+    border: 1px solid #eeeeee;
+    border-radius: 5px;
+    font-family: 'Lato', sans-serif;
+    color: black;
 }
 
-.content_card .card_img {
+.card_img {
     min-width: 270px;
-    width: 100%;
-    margin: 0;
-    border-radius: 5px 5px 0 0px;
+    width: 90%;
+    margin: 10px auto 5px 5%;
+    border-radius: 15px;
 }
 
 /* video {
@@ -70,11 +75,7 @@
 
 .content_card .card_text {
     padding: 10px;
-    background-color: #f6f6f6;
-    border: 1px solid #eeeeee;
-    border-radius: 5px;
-    font-family: 'Lato', sans-serif;
-    color: black;
+    
 }
 
 .card_text .content_title {
@@ -92,4 +93,8 @@
     font-weight: 200;
     text-align: right;
     color: #aaa;
+}
+
+.card_image {
+    width: 100%;
 }
