update projects to include some content for all

--- a/styles/home.css
+++ b/styles/home.css
@@ -17,11 +17,13 @@
     object-fit: cover;
   }
 
+  .splashBackground {
+    display: flex;
+  }
+
   .splash .splashHalf {
     margin: 0;
     padding: 0;
-    width: 49.8%;
-    display: inline-block;
   }
   
   .splashText {
