--- a/styles/home.css
+++ b/styles/home.css
@@ -4,26 +4,28 @@
 .splash {
     width: 100%;
     margin: 0 auto;
-    height: 100%;
+    height: 75vh;
     position: relative;
     background-color: black;
   }
   
   .splash .splashHalf img {
     width: 100%;
-    height: 500px;
-    transition: 0.2s ease;
-    opacity: 0.6;
+    height: 100%;
     object-fit: cover;
   }
-
+  
   .splashBackground {
     display: flex;
+    opacity: 0.6;
+    filter: blur(5px);
   }
 
   .splash .splashHalf {
     margin: 0;
     padding: 0;
+    width: 50%;
+    height: 75vh;
   }
   
   .splashText {
@@ -43,3 +45,79 @@
   .splashText h2 {
     font-size: 1.5rem;
   }
+
+  h1 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 900;
+    font-size: 2rem;
+  }
+
+  .pageContent {
+    margin: 0 20px;
+  }
+
+  .projectScroll {
+    display: flex;
+    flex-wrap: nowrap;
+    padding: 0 0 5px 0;
+  }
+
+  .content_card {
+    width: 600px;
+    padding: 0;
+    background-color: #f6f6f6;
+    border: 1px solid #eeeeee;
+    border-radius: 5px;
+    font-family: 'Lato', sans-serif;
+    color: black;
+    margin: 0 10px;
+}
+
+.card_img {
+    width: 90%;
+    margin: 10px auto;
+    overflow: hidden;
+}
+
+.card_img img {
+    width: 100%;
+    height: 100%;
+    max-height: 300px;
+    border-radius: 15px;
+    overflow: hidden;
+    object-fit: cover;
+    object-position: 0% 20%;
+}
+
+/* video {
+    min-width: 270px;
+    width: 100%;
+    margin: 0;
+} */
+
+
+.content_card .card_text {
+    padding: 10px;
+    
+}
+
+.card_text .content_title {
+    font-size: 20px;
+    margin: 0 5px 0 0;
+    font-weight: 900;
+}
+
+.card_text .content_info {
+    display: flex;
+    margin: 0 10px 0 5px;
+}
+
+.card_text .content_info p {
+    font-weight: 200;
+    text-align: right;
+    color: #aaa;
+}
+
+.card_image {
+    width: 100%;
+}
